--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>JS1 Homework - DOM+JS</title>
 	</head>
 	<body>
-		<h1> </h1>
 		<style type="text/css">
+			/* Chess board */
 			#chess {
 				border-spacing: 10px;
 				border-collapse: collapse;
@@ -15,13 +15,11 @@
 				margin: 0 auto;
 				padding-top: 25px;
 			}
-			.table{
-
-			}
 			.caption{display: table-caption; border: 0px;}
 			.cell{display: table-cell; border: 1px solid black; width: 50px; height: 50px;}
 			.row{background: white; display: table-row; border: 0px;}
-/* Display */
+			/* /Chess board */
+			/* Display */
 			.display{
 				position: fixed;
 				width: 100%;
@@ -33,8 +31,9 @@
 				width: 50%;
 				margin: 0 auto;
 			}
-/* /Display */
+			/* /Display */
 		</style>
+		<h1>  </h1>
 		<div id="chess">
 			
 		</div>
