--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				padding-top: 25px;
 			}
 			.caption{display: table-caption; border: 0px;}
-			.cell{display: table-cell; border: 1px solid black; width: 50px; height: 50px;}
+			.cell{background: white; display: table-cell; border: 1px solid black; width: 50px; height: 50px;}
 			.row{background: white; display: table-row; border: 0px;}
 			/* /Chess board */
 			/* Display */
