--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 			.displayIn{
 				width: 50%;
 				margin: 0 auto;
+				padding: 5px;
+				font: bold 12pt "Helvetica Nue", serif;
 			}
 			/* /Display */
 		</style>
